<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_middle"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_down" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/sort_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/guideline_middle"
        app:layout_constraintTop_toTopOf="@+id/guideline_down" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline_down"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_up">


        <TextView
            android:id="@+id/details_d4"
            android:layout_width="wrap_content"
            style="@style/TEXT"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/details_d4"
            android:textSize="24sp"
            tools:ignore="Suspicious0dp" />

        <TextView
            android:id="@+id/details_d6"
            android:layout_width="wrap_content"
            style="@style/TEXT"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/details_d6"
            android:textSize="24sp"
            tools:ignore="Suspicious0dp" />

        <TextView
            android:id="@+id/details_d8"
            android:layout_width="wrap_content"
            style="@style/TEXT"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/details_d8"
            android:textSize="24sp"
            tools:ignore="Suspicious0dp" />

        <TextView
            android:id="@+id/details_d10"
            android:layout_width="wrap_content"
            style="@style/TEXT"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/details_d10"
            android:textSize="24sp"
            tools:ignore="Suspicious0dp" />

        <TextView
            android:id="@+id/details_d12"
            android:layout_width="wrap_content"
            style="@style/TEXT"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/details_d12"
            android:textSize="24sp"
            tools:ignore="Suspicious0dp" />

        <TextView
            android:id="@+id/details_d20"
            android:layout_width="wrap_content"
            style="@style/TEXT"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/details_d20"
            android:textSize="24sp"
            tools:ignore="Suspicious0dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>